@@ -1,3 +1,9 @@
+2001-01-23  Glynn Foster <glynn.foster@sun.com>
+
+	* logos/*.gif: logos
+	* index.html: Added logos to the main page as 
+	provided by Dan.
+
 2001-12-08  Glynn Foster <glynn.foster@sun.com>
 
 	* board_of_directors-2000.html:
